[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rot-rh-gue"
version = "0.1.0"
description = "Frozen reflected Mangoldt-Stieltjes finite-GUE benchmark audits"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Buddhika Weerasooriya"}]
dependencies = ["numpy>=1.24"]

[tool.setuptools.packages.find]
where = ["src"]
